Removed bug causing bad behavior on mobile on navbar and added new color of button

--- a/src/FootTrack.Web/src/app/home/main-page/main-page.component.less
+++ b/src/FootTrack.Web/src/app/home/main-page/main-page.component.less
@@ -1,3 +1,5 @@
+@import '../../utilities/common-variables.less';
+
 .main-page-wrapper {
   margin: 0;
   padding: 0;
@@ -9,4 +11,5 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  background-color: @sea-blue-light;
 }
