--- a/src/FootTrack.Web/src/app/shared/components/navbar/navbar.component.less
+++ b/src/FootTrack.Web/src/app/shared/components/navbar/navbar.component.less
@@ -3,7 +3,6 @@
 .navbar {
   background-color: @sea-blue;
   padding: 5px 0;
-  max-height: 50px;
   -webkit-box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 7px 5px 0px rgba(0, 0, 0, 0.75);
