--- a/src/FootTrack.Web/src/app/utilities/common-variables.less
+++ b/src/FootTrack.Web/src/app/utilities/common-variables.less
@@ -1,5 +1,4 @@
 @footer-size: 50px;
-@header-size: 50px;
 @logo-height: 200px;
 @form-width: 500px;
 @sea-blue: #2a8ea8;
